<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_bg_1"
    android:orientation="vertical">

    <com.renren.wawa.view.CommTitleBarView
        android:id="@+id/title_bar"
        style="@style/CommTitleBarViewStyle"
        app:menuText="@string/save"
        app:titleText="@string/add_remarks" />

    <EditText
        android:id="@+id/remarks_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp200"
        android:layout_margin="@dimen/dp15"
        android:background="@drawable/bg_recycler_view"
        android:gravity="left"
        android:hint="@string/add_remarks_hint"
        android:padding="@dimen/dp10" />

</LinearLayout>
