<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@mipmap/login_bg">

        <TextView
            android:id="@+id/select_login_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dp20"
            android:padding="@dimen/dp10"
            android:text="@string/select_email_login"
            android:textColor="@color/white"
            android:visibility="visible" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_corners_btn"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/dp10"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/sp16"
            android:visibility="gone" />

        <EditText
            android:id="@+id/signin_passwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_corners_btn"
            android:hint="@string/passwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp10"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/sp16"
            android:visibility="gone" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_corner"
            android:drawableLeft="@mipmap/icon_wechat_white"
            android:drawablePadding="@dimen/dp20"
            android:gravity="center"
            android:paddingBottom="@dimen/dp10"
            android:paddingLeft="@dimen/dp55"
            android:paddingRight="@dimen/dp55"
            android:paddingTop="@dimen/dp10"
            android:text="@string/we_chat_login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/terms_and_policy_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp40"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/terms_and_policy_check_box"
            android:layout_width="@dimen/dp18"
            android:layout_height="@dimen/dp18"
            android:background="@drawable/view_checkbox_bg"
            android:button="@null"
            android:checked="true" />

        <TextView
            android:id="@+id/terms_and_policy_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:gravity="center"
            android:text="@string/terms_and_policy"
            android:textColor="#ADA5CB"
            android:textSize="@dimen/sp11" />
    </LinearLayout>

</LinearLayout>